botão de fechar adicionadoo

--- a/index.html
+++ b/index.html
@@ -34,13 +34,14 @@
                         <p>@</p>
                     </div>
                 </div>
-                
+
                 <div class="numbers">
                         <p>10</p>
                         <p>500</p>
-                </div>
+                    </div>
+                    <i class="fa-solid fa-xmark"></i>
             </div>
-
+            
         </section>
 
     </main>
