--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 <body>
     <header>
         <h1>GITHUB FAVORITES</h1>
-        <div class="search">
+        <form class="search">
             <div class="paiInput">
-                <input type="text" placeholder=" Usuário Do Github">
+                <input type="text" placeholder=" Usuário Do Github" id="search">
             </div>
-            <button>+</button>
-        </div>
+            <button class="addButton">+</button>
+        </form>
     </header>
     <main>
         
@@ -25,26 +25,11 @@
                 <p>Seguidores</p>
             </div>
         </section>
-        <section>
-            <div class="pessoa ">
-                <div class="img_nome">
-                    <img src="https://img.freepik.com/fotos-gratis/feliz-bonito-mulher-jovem-posar-camera-em-parque-cidade_1262-19158.jpg?size=626&ext=jpg" alt="">
-                    <div class="pessoa_nomes">
-                        <h1>Nome</h1>
-                        <p>@</p>
-                    </div>
-                </div>
-
-                <div class="numbers">
-                        <p>10</p>
-                        <p>500</p>
-                    </div>
-                    <i class="fa-solid fa-xmark"></i>
-            </div>
-            
+        <section class="pessoas">
         </section>
 
     </main>
     <script src="https://kit.fontawesome.com/54786c83f0.js" crossorigin="anonymous"></script>
+    <script src="app.js"></script>
 </body>
 </html>
