feature localStorage add

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>GithubFavs</title>
+    <title>Document</title>
 </head>
 <body>
     <header>
@@ -16,18 +16,16 @@
             <button class="addButton">+</button>
         </form>
     </header>
-    <main>
-        
-        <section class="index">
-            <p>Usuário</p>
-            <div>
-                <p>Repositórios</p>
-                <p>Seguidores</p>
-            </div>
-        </section>
-        <section class="pessoas">
-        </section>
 
+   <main class="table">
+        <div class="index">
+            <p>Usuario</p>
+            <p>Repositorio</p>
+            <p>Seguidores</p>
+        </div>
+        <div class="dados">
+           
+        </div>
     </main>
     <script src="https://kit.fontawesome.com/54786c83f0.js" crossorigin="anonymous"></script>
     <script src="app.js"></script>
