--- a/index.html
+++ b/index.html
@@ -28,6 +28,6 @@
         </div>
     </main>
     <script src="https://kit.fontawesome.com/54786c83f0.js" crossorigin="anonymous"></script>
-    <script src="app.js"></script>
+    <script type="module" src="main.js"></script>
 </body>
 </html>
